dark mode fix contd

--- a/front/styles/_theme.scss
+++ b/front/styles/_theme.scss
@@ -2,7 +2,8 @@
   html {
     color-scheme: dark;
   }
-  body {
+  body,
+  .scrollMe {
     color: white;
     background: black;
   }
@@ -32,5 +33,9 @@
     &__header {
       background: gray;
     }
+  }
+  .scrollMe {
+    border: 0.1em solid gray;
+    box-shadow: 1px 1px 2px white;
   }
 }
